--- a/index.html
+++ b/index.html
@@ -5,15 +5,164 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./public/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barriecito&display=swap" rel="stylesheet">
 </head>
 <body>
    <header>
     <div class="opacité">
-      <h1>SHOP IDEA</h1>
+      <h1>Pizza de Baba Laulaukubz Pizza</h1>
       <section class="finance"></section>
     </div>
    </header>
-   <section class="vitrine"></section>
+
+   <h1 class="carte" >Notre Carte</h1>
+   <div class="vitrine">
+    
+    <div class="card">
+        <h2>Margherita</h2>
+        <img src="./public/img/margerita.jpg" alt="">
+        <p>Prix: 10€</p>
+        <p>Ingrédients:</p>
+        <ul>
+            <li>Ingrédient 3</li>
+        </ul>
+    </div>
+    <!-- Répétez les cartes suivantes pour les autres produits -->
+    <div class="card">
+        <h2> Pizza Cannibale</h2>
+        <img src="./public/img/cannibale.webp" alt="">
+        <p>Prix: 12€</p>
+        <p>Ingrédients:</p>
+        <ul>
+            <li>Ingrédient 3</li>
+        </ul>
+    </div>
+    <div class="card">
+        <h2>Pizza 3 Fromages</h2>
+        <img src="./public/img/3fromages.webp" alt="">
+        <p>Prix: 12€</p>
+        <p>Ingrédients:</p>
+        <ul>
+            <li>Ingrédient 3</li>
+        </ul>
+    </div>
+    <div class="card">
+        <h2>Pizza 4 Fromages</h2>
+        <img src="./public/img/4fromages.jpg" alt="">
+        <p>Prix: 12€</p>
+        <p>Ingrédients:</p>
+        <ul>
+            <li>Ingrédient 3</li>
+        </ul>
+    </div>
+    <div class="card">
+        <h2>Pizza Royale</h2>
+        <img src="./public/img/royale.png" alt="">
+        <p>Prix: 12€</p>
+        <p>Ingrédients:</p>
+        <ul>
+            <li>Ingrédient 3</li>
+        </ul>
+    </div>
+    <div class="card">
+        <h2>Pizza Végétarienne</h2>
+        <img src="./public/img/vege.jpg" alt="">
+        <p>Prix: 12€</p>
+        <p>Ingrédients:</p>
+        <ul>
+            <li>Ingrédient 3</li>
+        </ul>
+    </div>
+    <div class="card">
+        <h2>Pizza Provencale</h2>
+        <img src="./public/img/pizza-provencale.jpg" alt="">
+        <p>Prix: 12€</p>
+        <p>Ingrédients:</p>
+        <ul>
+            <li>Ingrédient 3</li>
+        </ul>
+    </div>
+    <div class="card">
+        <h2>Pizza Italienne</h2>
+        <img src="./public/img/italienne 2.avif" alt="">
+        <p>Prix: 12€</p>
+        <p>Ingrédients:</p>
+        <ul>
+            <li>Ingrédient 3</li>
+        </ul>
+    </div>
+    <div class="card">
+        <h2>Pizza Espagnole</h2>
+        <img src="./public/img/espagnole.jpg" alt="">
+        <p>Prix: 12€</p>
+        <p>Ingrédients:</p>
+        <ul>
+            <li>Ingrédient 3</li>
+        </ul>
+    </div>
+    <div class="card">
+        <h2>Pizza Turque (Pide)</h2>
+        <img src="./public/img/pide.avif" alt="">
+        <p>Prix: 12€</p>
+        <p>Ingrédients:</p>
+        <ul>
+            <li>Ingrédient 3</li>
+        </ul>
+    </div>
+    <div class="card">
+        <h2>Pizza Pepperoni</h2>
+        <img src="./public/img/peperroni.jpg" alt="">
+        <p>Prix: 12€</p>
+        <p>Ingrédients:</p>
+        <ul>
+            <li>Ingrédient 3</li>
+        </ul>
+    </div>
+    <div class="card">
+        <h2>Pizza BBQ</h2>
+        <img src="./public/img/BBQ.avif" alt="">
+        <p>Prix: 12€</p>
+        <p>Ingrédients:</p>
+        <ul>
+            <li>Ingrédient 3</li>
+        </ul>
+    </div>
+    <div class="card">
+        <h2>Produit 2</h2>
+        <p>Prix: 12€</p>
+        <p>Ingrédients:</p>
+        <ul>
+            <li>Ingrédient 3</li>
+        </ul>
+    </div>
+    <div class="card">
+        <h2>Produit 2</h2>
+        <p>Prix: 12€</p>
+        <p>Ingrédients:</p>
+        <ul>
+            <li>Ingrédient 3</li>
+        </ul>
+    </div>
+    <div class="card">
+        <h2>Produit 2</h2>
+        <p>Prix: 12€</p>
+        <p>Ingrédients:</p>
+        <ul>
+            <li>Ingrédient 3</li>
+        </ul>
+    </div>
+    <div class="card">
+        <h2>Produit 2</h2>
+        <p>Prix: 12€</p>
+        <p>Ingrédients:</p>
+        <ul>
+            <li>Ingrédient 3</li>
+        </ul>
+    </div>
+    <!-- Ajoutez les cartes suivantes jusqu'au produit 16 -->
+</div>
     
 </body>
 </html>
