--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p>Prix: 10€</p>
         <p>Ingrédients:</p>
         <ul>
-            <li>Ingrédient 3</li>
+            <li>tomates, de mozzarella, de basilic frais, de sel et d'huile d'olive</li>
         </ul>
     </div>
     <!-- Répétez les cartes suivantes pour les autres produits -->
@@ -36,7 +36,7 @@
         <p>Prix: 12€</p>
         <p>Ingrédients:</p>
         <ul>
-            <li>Ingrédient 3</li>
+            <li>Sauce BBQ, mozzarella, boeuf, merguez, poulet & un swirl de sauce BBQ.</li>
         </ul>
     </div>
     <div class="card">
@@ -45,7 +45,7 @@
         <p>Prix: 12€</p>
         <p>Ingrédients:</p>
         <ul>
-            <li>Ingrédient 3</li>
+            <li>roquefort, tomate (concentré), mozzarella (boule) et chèvre frais.</li>
         </ul>
     </div>
     <div class="card">
@@ -54,7 +54,7 @@
         <p>Prix: 12€</p>
         <p>Ingrédients:</p>
         <ul>
-            <li>Ingrédient 3</li>
+            <li>Mozzarella , Gorgonzola (Bleu),Comté ,Fromage de chèvre</li>
         </ul>
     </div>
     <div class="card">
@@ -63,7 +63,7 @@
         <p>Prix: 12€</p>
         <p>Ingrédients:</p>
         <ul>
-            <li>Ingrédient 3</li>
+            <li>tomate, de jambon, de mozzarella et d'olives noires.</li>
         </ul>
     </div>
     <div class="card">
@@ -72,7 +72,7 @@
         <p>Prix: 12€</p>
         <p>Ingrédients:</p>
         <ul>
-            <li>Ingrédient 3</li>
+            <li>elle ne contient pas de viande donc legumes </li>
         </ul>
     </div>
     <div class="card">
@@ -81,7 +81,7 @@
         <p>Prix: 12€</p>
         <p>Ingrédients:</p>
         <ul>
-            <li>Ingrédient 3</li>
+            <li>Mozzarella · Tomate Fraîche · Anchois  · Persillade · Olive.</li>
         </ul>
     </div>
     <div class="card">
@@ -90,7 +90,7 @@
         <p>Prix: 12€</p>
         <p>Ingrédients:</p>
         <ul>
-            <li>Ingrédient 3</li>
+            <li> fromage, lardons, champignons, oeuf, émincés de chicken</li>
         </ul>
     </div>
     <div class="card">
@@ -99,7 +99,7 @@
         <p>Prix: 12€</p>
         <p>Ingrédients:</p>
         <ul>
-            <li>Ingrédient 3</li>
+            <li>Chorizo, aubergines, tomates</li>
         </ul>
     </div>
     <div class="card">
@@ -108,7 +108,7 @@
         <p>Prix: 12€</p>
         <p>Ingrédients:</p>
         <ul>
-            <li>Ingrédient 3</li>
+            <li>fromage kasar turc ,fromage haloumi , botte de persil</li>
         </ul>
     </div>
     <div class="card">
@@ -117,7 +117,8 @@
         <p>Prix: 12€</p>
         <p>Ingrédients:</p>
         <ul>
-            <li>Ingrédient 3</li>
+            <li>Pâte à pizza ,Sauce tomate ,Fromage mozzarella,
+                Pepperoni</li>
         </ul>
     </div>
     <div class="card">
@@ -126,7 +127,7 @@
         <p>Prix: 12€</p>
         <p>Ingrédients:</p>
         <ul>
-            <li>Ingrédient 3</li>
+            <li>Bacon,Poivrons (verts, rouges ou un mélange),Coriandre fraîche (hachée),Fromage cheddar (en plus de la mozzarella)</li>
         </ul>
     </div>
     <div class="card">
